Change text in about section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing-page
 				<header class="special container" id="about">
 					<span class="icon fa-pagelines"></span>
 					<h2>The People's Project Dumfries</h2>
-					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo</p>
+					<p>Ted tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo</p>
 				</header>
 					
 				<!-- One -->
