add layout to contacts page

--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,6 @@
-<!DOCTYPE HTML>
-<html>
-	
-    {% include head.html %}
-
-
-	<body class="contact">
-	
-		<!-- nav -->
-			    
-    {% include header.html %}
-
-		
-		<!-- Main -->
+---
+layout: landing-page
+---
 			<article id="main">
 
 				<header class="special container">
@@ -58,9 +47,3 @@
 				
 			</article>
 
-		<!-- Footer -->
-
-	{% include footer.html %}
-
-	</body>
-</html>
