--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@ layout: default
                 {{ post.excerpt }}
                 <section class="special">
                     <ul class="buttons">
-                        <li><a href="{{ post.url }}" class="button">Read more</a></li>
+                        <li><a href="{{ site.baseurl }}{{ post.url }}" class="button">Read more</a></li>
                     </ul></section>
             </li>
           {% endfor %}
