change path for js in head

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ layout: landing-page
 				</header>
 				<footer>
 					<ul class="buttons">
-						<li><a href="/contact" class="button">Contact Us</a></li>
+						<li><a href="{{ site.baseurl }}/contact" class="button">Contact Us</a></li>
 					</ul>
 				</footer>
 			
